# selinux

./: .clang-format  .editorconfig  .gitignore  .packit.yaml  .travis.yml  Android.mk  CONTRIBUTING.md  CleanSpec.mk  LICENSE  Makefile  Makefile.toolchain  README  README.md  SECURITY.md  checkpolicy.spec  lgtm.yml
checkpolicy/: .clang-format-ignore  .gitignore  Android.mk  ChangeLog  Makefile  Makefile.am  Makefile.in  VERSION  aclocal.m4  checkmodule.8  checkmodule.c  checkpolicy.8  checkpolicy.c  checkpolicy.h  config.h.in  configure  configure.ac  module_compiler.c  module_compiler.h  parse_util.c  parse_util.h  policy_define.c  policy_define.h  policy_parse.y  policy_scan.l  queue.c  queue.h
checkpolicy/fuzz/: checkpolicy-fuzzer.c  checkpolicy-fuzzer.dict  min_pol.conf  min_pol.mls.conf
checkpolicy/ru/: checkmodule.8  checkpolicy.8
checkpolicy/test/: .gitignore  Makefile  Makefile.am  dismod.c  dispol.c
checkpolicy/tests/: policy_allonce.conf  policy_allonce.expected.conf  policy_allonce.expected_opt.conf  policy_allonce_mls.conf  policy_allonce_mls.expected.conf  policy_allonce_mls.expected_opt.conf  policy_allonce_xen.conf  policy_allonce_xen.expected.conf  policy_allonce_xen.expected_opt.conf  policy_minimal.conf  policy_minimal_mls.conf  polmin.conf  polmin.mls.conf  test_checkpolicy.sh  test_roundtrip.sh
libselinux/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  VERSION  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
libselinux/fuzz/: selabel_file_compiled-fuzzer.c  selabel_file_text-fuzzer.c
libselinux/include/: Makefile  Makefile.am  Makefile.in
libselinux/man/: Makefile  Makefile.am  Makefile.in
libselinux/src/: .gitignore  Makefile  Makefile.am  Makefile.in  __init__.py  audit2why-py2.map  audit2why-py3.map  audit2why.c  audit2why.map  av_inherit.h  av_perm_to_string.h  avc.c  avc_internal.c  avc_internal.h  avc_sidtab.c  avc_sidtab.h  booleans.c  callbacks.c  callbacks.h  canonicalize_context.c  checkAccess.c  check_context.c  checkreqprot.c  class_to_string.h  common_perm_to_string.h  compat_file_path.h  compute_av.c  compute_create.c  compute_member.c  compute_relabel.c  compute_user.c  context.c  context_internal.h  deny_unknown.c  disable.c  dso.h  enabled.c  exception.sh  fgetfilecon.c  file_path_suffixes.h  (+69 more)
libselinux/utils/: .gitignore  Makefile  Makefile.am  Makefile.in  avcstat.c  compute_av.c  compute_create.c  compute_member.c  compute_relabel.c  compute_user.c  getconlist.c  getdefaultcon.c  getenforce.c  getfilecon.c  getpidcon.c  getpidprevcon.c  getpolicyload.c  getsebool.c  getseuser.c  matchpathcon.c  policyvers.c  sefcontext_compile.c  selabel_compare.c  selabel_digest.c  selabel_get_digests_all_partial_matches.c  selabel_lookup.c  selabel_lookup_best_match.c  selabel_partial_match.c  selinux_check_access.c  selinux_check_securetty_context.c  selinux_restorecon.c  selinuxenabled.c  selinuxexeccon.c  selinuxunshared.c  setenforce.c  setfilecon.c  togglesebool.c  unshareselinux.c  validatetrans.c
libsemanage/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  VERSION  aclocal.m4  config.h.in  configure  configure.ac
libsemanage/example/: test_fcontext.c
libsemanage/include/: Makefile  Makefile.am  Makefile.in
libsemanage/man/: Makefile  Makefile.am  Makefile.in
libsemanage/src/: .clang-format-ignore  .gitignore  Makefile  Makefile.am  Makefile.in  __init__.py  boolean_internal.h  boolean_record.c  booleans_active.c  booleans_activedb.c  booleans_file.c  booleans_local.c  booleans_policy.c  booleans_policydb.c  compressed_file.c  compressed_file.h  conf-parse.y  conf-scan.l  context_internal.h  context_record.c  database.c  database.h  database_activedb.c  database_activedb.h  database_file.c  database_file.h  database_join.c  database_join.h  database_llist.c  database_llist.h  database_policydb.c  database_policydb.h  debug.c  debug.h  direct_api.c  direct_api.h  dso.h  exception.sh  fcontext_internal.h  fcontext_record.c  (+77 more)
libsemanage/tests/: .gitignore  Makefile  Makefile.am  README  libsemanage-tests.c  nc_sort_malformed  nc_sort_sorted  nc_sort_unsorted  test_bool.c  test_bool.cil  test_bool.h  test_fcontext.c  test_fcontext.cil  test_fcontext.h  test_handle.c  test_handle.cil  test_handle.h  test_ibendport.c  test_ibendport.cil  test_ibendport.h  test_iface.c  test_iface.cil  test_iface.h  test_node.c  test_node.cil  test_node.h  test_other.c  test_other.h  test_port.c  test_port.cil  test_port.h  test_semanage_store.c  test_semanage_store.h  test_user.c  test_user.cil  test_user.h  test_utilities.c  test_utilities.h  utilities.c  utilities.h
libsemanage/utils/: Makefile  semanage_migrate_store
libsepol/: Android.mk  ChangeLog  Makefile  Makefile.am  Makefile.in  VERSION  aclocal.m4  config.h.in  configure  configure.ac  libtool_compat.h
libsepol/cil/: .clang-format-ignore  Makefile  README  secilc.c
libsepol/fuzz/: binpolicy-fuzzer.c  secilc-fuzzer.c
libsepol/include/: Makefile  Makefile.am  Makefile.in
libsepol/man/: Makefile  Makefile.am  Makefile.in
libsepol/src/: Makefile  Makefile.am  Makefile.in  android_m_compat.c  android_m_compat.h  assertion.c  avrule_block.c  avtab.c  boolean_record.c  booleans.c  conditional.c  constraint.c  context.c  context.h  context_internal.h  context_record.c  debug.c  debug.h  deprecated_funcs.c  ebitmap.c  expand.c  expand.c.rej  flask.h  genbools.c  genusers.c  handle.c  handle.h  hashtab.c  hierarchy.c  ibendport_internal.h  ibendport_record.c  ibendports.c  ibpkey_internal.h  ibpkey_record.c  ibpkeys.c  iface_record.c  interfaces.c  kernel_to_cil.c  kernel_to_common.c  kernel_to_common.h  (+31 more)
libsepol/tests/: Makefile  Makefile.am  debug.c  debug.h  helpers.c  helpers.h  libsepol-tests.c  test-common.c  test-common.h  test-cond.c  test-deps.c  test-disjointattributes.c  test-disjointattributes.h  test-downgrade.c  test-ebitmap.c  (+16 more)
policycoreutils/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  VERSION  aclocal.m4  config.h.in  configure  configure.ac
sepolgen/: ChangeLog  HACKING  Makefile.am  VERSION  configure.ac
(+1529 files in other folders)
