dist_man_MANS	= $(mydocs)
mydocs=
if enable_docs
mydocs	+= man3/avc_add_callback.3 man3/avc_audit.3 man3/avc_av_stats.3 \
	man3/avc_cache_stats.3 man3/avc_cleanup.3 man3/avc_compute_create.3 \
	man3/avc_compute_member.3 man3/avc_context_to_sid.3 man3/avc_destroy.3 \
	man3/avc_entry_ref_init.3 man3/avc_get_initial_context.3 \
	man3/avc_has_perm.3 \
	man3/avc_has_perm_noaudit.3 man3/avc_init.3 man3/avc_reset.3 \
	man3/avc_sid_stats.3 man3/avc_sid_to_context.3 man3/checkPasswdAccess.3 \
	man3/context_free.3 man3/context_new.3 man3/context_range_get.3 \
	man3/context_range_set.3 man3/context_role_get.3 man3/context_role_set.3 \
	man3/context_type_get.3 man3/context_type_set.3 man3/context_user_get.3 \
	man3/context_user_set.3 man3/freecon.3 man3/freeconary.3 \
	man3/fsetfilecon.3 man3/getcon.3 man3/get_default_context.3 \
	man3/get_default_context_with_level.3 \
	man3/get_default_context_with_role.3 \
	man3/get_default_context_with_rolelevel.3 man3/getexeccon.3 \
	man3/getfilecon.3 \
	man3/getfscreatecon.3 man3/get_ordered_context_list.3 \
	man3/get_ordered_context_list_with_level.3 man3/getpeercon.3 \
	man3/getpidcon.3 man3/getprevcon.3 man3/getseuserbyname.3 \
	man3/is_context_customizable.3 man3/is_selinux_enabled.3 \
	man3/lsetfilecon.3 man3/manual_user_enter_context.3 man3/matchmediacon.3 \
	man3/matchpathcon.3 man3/query_user_context.3 man3/rpm_execcon.3 \
	man3/security_av_perm_to_string.3 man3/security_av_string.3 \
	man3/security_check_context.3 man3/security_class_to_string.3 \
	man3/security_commit_booleans.3 man3/security_compute_av.3 \
	man3/security_compute_create.3 man3/security_compute_member.3 \
	man3/security_compute_relabel.3 man3/security_compute_user.3 \
	man3/security_get_boolean_active.3 man3/security_get_boolean_names.3 \
	man3/security_get_boolean_pending.3 man3/security_getenforce.3 \
	man3/security_get_initial_context.3 man3/security_load_booleans.3 \
	man3/security_load_policy.3 man3/security_policyvers.3 \
	man3/security_set_boolean.3 man3/security_setenforce.3 \
	man3/selabel_close.3 man3/selabel_lookup.3 man3/selabel_open.3 \
	man3/selabel_stats.3 man3/selinux_binary_policy_path.3 \
	man3/selinux_booleans_path.3 man3/selinux_check_securetty_context.3 \
	man3/selinux_contexts_path.3 man3/selinux_default_context_path.3 \
	man3/selinux_failsafe_context_path.3 man3/selinux_file_context_path.3 \
	man3/selinux_getenforcemode.3 man3/selinux_media_context_path.3 \
	man3/selinux_policy_root.3 man3/selinux_removable_context_path.3 \
	man3/selinux_securetty_types_path.3 man3/selinux_set_callback.3 \
	man3/selinux_user_contexts_path.3 man3/setcon.3 man3/setexeccon.3 \
	man3/setfilecon.3 man3/setfscreatecon.3 man3/set_matchpathcon_printf.3 \
	man3/sidget.3 man3/sidput.3 man3/string_to_av_perm.3 \
	man3/string_to_security_class.3 man5/selabel_file.5 \
	man5/selabel_media.5 man5/selabel_x.5 man8/avcstat.8 \
	man8/booleans.8 man8/getenforce.8 man8/getsebool.8 \
	man8/matchpathcon.8 man8/selinux.8 man8/selinuxenabled.8 \
	man8/setenforce.8 man8/togglesebool.8
endif
