nobase_include_HEADERS = \
	semanage/boolean_record.h 	semanage/booleans_active.h \
	semanage/booleans_local.h 	semanage/booleans_policy.h \
	semanage/context_record.h 	semanage/debug.h \
	semanage/fcontext_record.h 	semanage/fcontexts_local.h \
	semanage/fcontexts_policy.h	semanage/handle.h \
	semanage/iface_record.h 	semanage/interfaces_local.h \
	semanage/interfaces_policy.h 	semanage/modules.h \
	semanage/node_record.h 		semanage/nodes_local.h \
	semanage/nodes_policy.h 	semanage/port_record.h \
	semanage/ports_local.h 		semanage/ports_policy.h \
	semanage/semanage.h 		semanage/seuser_record.h \
	semanage/seusers_local.h 	semanage/seusers_policy.h \
	semanage/user_record.h 		semanage/users_local.h \
	semanage/users_policy.h
